--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -2,7 +2,7 @@
 .header {
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100%;
     display: flex;
     justify-content: space-between;
