--- a/styles/services.css
+++ b/styles/services.css
@@ -124,6 +124,7 @@ gap: 20px;
 max-width: 1200px;
 margin: 40px auto;
 padding: 0 20px;
+margin-bottom: 0;
 }
 
 .service-card {
@@ -214,6 +215,14 @@ to { opacity: 1; transform: translateY(0); }
     font-size: 1rem;
     color: #666;
   }
+
+  .services-paragraph{
+    background: white;
+    padding: 20px 20px;
+    margin: 20px 0;
+    margin-top: 0;
+  }
+
   footer {
     text-align: center;
     padding: 20px;
