--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -14,8 +14,14 @@
   }
 
   .logo img {
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    margin: 8px 0;
+  }
+
+  .logo::after {
+    content: "mianmajid.arch";
+    color: #444;
+    margin-top: 5px;
   }
 
   .nav-menu {
@@ -290,7 +296,16 @@ h2 {
   .contact-container input{
     border-radius: 0;
     margin: 10px;
-    margin: 95%;
+    width: 95%;
+  }
+  .contact-container textarea{
+    border-radius: 0;
+    margin: 10px; 
+    width: 95%;
+  }
+  .contact-container button{
+    margin: 10px; 
+    width: 95%;
   }
   .contact-info div, .contact-form button {
     border-radius: 0;
