--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -1,6 +1,6 @@
 /* Header */
 .header {
-    position: absolute;
+    position: sticky;
     top: 0;
     right: 0;
     width: 100%;
@@ -10,7 +10,7 @@
     padding: 2px 30px;
     background: rgba(255, 255, 255, 0.596);
     backdrop-filter: blur(5px);
-    z-index: 500;
+    z-index: 1000;
   }
 
   .logo img {
